--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -7,7 +7,6 @@
     font-weight: 700;
     padding: 1em 0 0.5em 0;
 }
-
 .swiper_slide img{
     width: 100%;
 }
@@ -19,4 +18,16 @@
 .swiper-pagination{
     position: initial;
     margin: 0.5em 0;
+}
+
+/* parte ferente oa card */
+
+.card_descrição{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.card_botões{
+    display: flex;
 }
