--- a/style/banner.css
+++ b/style/banner.css
@@ -1,18 +1,20 @@
 .banner{
     background: var(--azul-degrade);
     color: var(--branco);
-    text-align: center;
-    padding: 2em 5em;
+    align-items: center;
+    padding: 2.5em 2em;
 }
 
 .banner_titulo{
     font-size: 18px;
     font-weight: 700;
+    text-align: center;
 }
 
 .banner_texto{
     font-weight: 500;
     padding: 1em;
+    text-align: center;
 }
 
 .banner_pesquisa{
@@ -27,7 +29,7 @@
 .banner_pesquisa::placeholder{
     font-family: var(--fonte-principal);
     font-size: 14px;
-    font-weight: 400px;
+    font-weight: 400;
     text-align: center;
     color: var(--branco);
     background: url("../img/Lupa.svg") no-repeat;
