--- a/style/header.css
+++ b/style/header.css
@@ -1,4 +1,4 @@
-.cabeçalho_menu-hunburguer{
+.cabecalho_menu-hunburger{
     width: 24px;
     height: 24px;
     background-image: url(../img/Menu.svg);
@@ -7,7 +7,7 @@
     display: inline-block;
 }
 
-.cabeçalho{
+.cabecalho{
     background-color: var(--branco);
     display: flex;
     justify-content: space-between;
@@ -27,7 +27,7 @@
 .lista-menu{
     display: none;
     position: absolute;
-    top: 100%;
+    top: 80%;
     width: 60vw;
 }
 
@@ -38,7 +38,7 @@
 .lista-menu_titulo,
 .lista-menu_item{
     padding: 1em;
-    background-color: var(--branco);
+    background-color: var(--branco)
 }
 
 .lista-menu_titulo{
